LIN-3358/LIN-3359 Enhance @UIRadioButtons and @UIComboBox to support Boolean values
Change-Id: I43ef328f3e4a50eb34e331a8cd85444036f172ba